# agentguard-lib

./: LICENSE  README.MD  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
agentguard/: __init__.py  _version.py  cli.py  pipeline.py
agentguard/archetypes/: __init__.py  base.py  registry.py  schema.py
agentguard/archetypes/builtin/: api_backend.yaml  archetype_author.yaml  cli_tool.yaml  debug_backend.yaml  debug_frontend.yaml  library.yaml  react_spa.yaml  script.yaml  web_app.yaml
agentguard/benchmark/: README.md  __init__.py  catalog.py  criteria_evaluator.py  evaluator.py  report.py  runner.py  types.py
agentguard/benchmark/profiles/: __init__.py  builtin.py  registry.py
agentguard/challenge/: __init__.py  challenger.py  grounding.py  types.py
agentguard/context/: __init__.py  recipe.py  summarizer.py  window.py
agentguard/integrations/: __init__.py  crewai.py  langgraph.py  openhands.py
agentguard/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  litellm_provider.py  openai_provider.py  types.py
agentguard/mcp/: __init__.py  agent_tools.py  resources.py  server.py  tools.py  usage_tracker.py
agentguard/platform/: __init__.py  client.py  config.py  license_cache.py
agentguard/prompts/: __init__.py  registry.py  template.py
agentguard/prompts/builtin/: challenge.yaml  contracts.yaml  logic.yaml  rework.yaml  skeleton.yaml  wiring.yaml
agentguard/server/: __init__.py  app.py  auth.py  routes.py  schemas.py  sse.py
agentguard/topdown/: __init__.py  contracts.py  generator.py  levels.py  logic.py  skeleton.py  types.py  wiring.py
agentguard/tracing/: __init__.py  cost.py  trace.py  tracer.py
agentguard/validation/: __init__.py  autofix.py  types.py  validator.py
agentguard/validation/checks/: __init__.py  imports.py  lint.py  structure.py  syntax.py  types.py
examples/: README.md  basic_generation.py  langgraph_pipeline.py  validation_workflow.py
tests/: conftest.py  test_archetypes.py  test_benchmark.py  test_benchmark_profiles.py  test_challenge.py  test_context.py  test_llm_factory.py  test_llm_types.py  test_phase2.py  test_phase3.py  test_pipeline.py  test_platform.py  test_prompts.py  test_registry_integrity.py  test_schema_validation.py  test_topdown.py  test_tracing.py  test_validation.py  test_ws4_bridge.py
